RESOLVED FIXED31462
Chromium should not register its VFS as the default VFS
https://bugs.webkit.org/show_bug.cgi?id=31462
Summary Chromium should not register its VFS as the default VFS
Dumitru Daniliuc
Reported 2009-11-13 00:46:57 PST
Currently Chromium registers its HTML5 DB-specific VFS as the default VFS in all renderer processes. This is fine as long as HTML5 DBs is the only feature using sqlite databases in those processes. However, as soon as there are other sqlite DB users in the same process (DB tracker in test_shell, for example), they fail, because they don't expect to deal with a custom VFS. To fix this, we should keep the default sqlite VFS as the default VFS, and the HTML5 DB code can explicitly call the custom VFS by name.
Attachments
patch (2.87 KB, patch)
2009-11-13 01:04 PST, Dumitru Daniliuc
dglazkov: review+
dumi: commit-queue-
Dumitru Daniliuc
Comment 1 2009-11-13 01:04:21 PST
Dimitri Glazkov (Google)
Comment 2 2009-11-13 07:26:39 PST
Comment on attachment 43147 [details] patch ok.
Dumitru Daniliuc
Comment 3 2009-11-13 11:34:10 PST
Landed as r50954.
Note You need to log in before you can comment on or make changes to this bug.