Do not register Chromium's HTML5 DB VFS as the default VFS. Otherwise, other sqlite DB users in the same process will stop working.

Reviewed by Dimitri Glazkov.

https://bugs.webkit.org/show_bug.cgi?id=31462

* platform/sql/chromium/SQLiteFileSystemChromium.cpp:
(WebCore::SQLiteFileSystem::openDatabase):
* platform/sql/chromium/SQLiteFileSystemChromiumPosix.cpp:
(WebCore::SQLiteFileSystem::registerSQLiteVFS):
* platform/sql/chromium/SQLiteFileSystemChromiumWin.cpp:
(WebCore::SQLiteFileSystem::registerSQLiteVFS):



Canonical link: https://commits.webkit.org/42383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50954 268f45cc-cd09-0410-ab3c-d52691b4dbfc